--- a/.github/workflows/sync-test-repo-2.yml
+++ b/.github/workflows/sync-test-repo-2.yml
@@ -31,6 +31,12 @@ jobs:
           git remote prune test-repo-2
           git fetch test-repo-2
 
+      - name: Fetch latest changes from test-repo-2 and merge to main
+        run: |
+          git fetch test-repo-2
+          git checkout main
+          git merge test-repo-2/main
+
       - name: Merge changes to development branch and handle conflicts
         run: |
           git checkout -b test-repo-2-development test-repo-2/development || git checkout test-repo-2-development
